--- a/src/app/layout/layouts/student/student.component.html
+++ b/src/app/layout/layouts/student/student.component.html
@@ -2,7 +2,9 @@
   <!-- Header -->
   <student-header></student-header>
   <!-- Main -->
-  <div class="flex-grow p-6 pb-10 overflow-auto" scrollReset>
-    <router-outlet *ngIf="true"></router-outlet>
+  <div class="flex-grow overflow-hidden">
+    <div class="h-full px-6 py-8 overflow-auto" scrollReset>
+      <router-outlet *ngIf="true"></router-outlet>
+    </div>
   </div>
 </div>
