--- a/src/app/layout/layouts/admin/admin.component.html
+++ b/src/app/layout/layouts/admin/admin.component.html
@@ -1,6 +1,4 @@
-<div
-  class="w-full h-full overflow-hidden flex flex-col relative bg-gray-100"
->
+<div class="w-full h-full overflow-hidden flex flex-col relative bg-gray-100">
   <!-- Header -->
   <admin-header></admin-header>
   <div class="flex-grow flex flex-auto w-full overflow-hidden">
@@ -17,8 +15,10 @@
       </vertical-navigation>
     </div>
     <!-- Main -->
-    <div class="flex-grow md:p-6 p-4 overflow-auto" scrollReset>
-      <router-outlet *ngIf="true"></router-outlet>
+    <div class="flex-grow">
+      <div class="h-full px-6 py-8 overflow-auto" scrollReset>
+        <router-outlet *ngIf="true"></router-outlet>
+      </div>
     </div>
   </div>
 </div>
