--- a/src/app/layout/layouts/tutor/tutor.component.html
+++ b/src/app/layout/layouts/tutor/tutor.component.html
@@ -1,11 +1,8 @@
-<div
-  class="w-full h-full overflow-hidden flex flex-col relative bg-gray-100"
->
+<div class="w-full h-full overflow-hidden flex flex-col relative bg-gray-100">
   <!-- Header -->
   <tutor-header></tutor-header>
-  <div class="flex-grow flex flex-auto w-full overflow-hidden">
-    <!-- Main -->
-    <div class="flex-grow p-6 pb-10 overflow-auto" scrollReset>
+  <div class="flex-grow overflow-hidden">
+    <div class="h-full px-6 py-8 overflow-auto" scrollReset>
       <router-outlet *ngIf="true"></router-outlet>
     </div>
   </div>
