--- a/src/app/modules/admin/account/account.component.html
+++ b/src/app/modules/admin/account/account.component.html
@@ -1,8 +1,8 @@
-  <div class="flex flex-col w-full max-w-6xl mx-auto overflow-hidden">
+<div class="flex flex-col w-full max-w-4xl mx-auto overflow-hidden">
   <div class="flex-grow flex-wrap flex gap-8">
-    <div class="flex flex-col w-64 flex-shrink-0">
+    <div class="flex flex-col w-60 flex-shrink-0">
       <div class="font-medium text-gray-900 text-2xl mb-4">
-        {{ "Settings.AccountSettings" | translate }}
+        {{ "Account.Title" | translate }}
       </div>
       <a
         class="mb-2 flex items-center gap-3 hover:no-underline px-3 py-2 rounded text-gray-500 cursor-pointer hover:bg-gray-200"
