--- a/src/app/modules/admin/students/students.component.html
+++ b/src/app/modules/admin/students/students.component.html
@@ -1,10 +1,10 @@
-<div class="w-full mx-auto min-h-full flex flex-col max-w-6xl">
-  <div class="flex gap-4 flex-wrap md:flex-nowrap justify-between">
-    <div class="font-medium text-gray-900 text-2xl mb-3 w-full">
+<div class="w-full mx-auto min-h-full flex flex-col max-w-7xl">
+  <div class="flex gap-2 flex-wrap md:flex-nowrap justify-between">
+    <div class="font-medium text-gray-900 text-2xl w-full">
       {{ "Student.Titles" | translate }}
     </div>
     <mat-form-field
-      class="w-full sm:w-1/2 mat-form-field--sm"
+      class="w-full md:w-1/2 mat-form-field--sm"
       appearance="fill"
       [floatLabel]="'always'"
       [ngClass]=""
@@ -78,7 +78,7 @@
               {{ "Table.Name" | translate }}
             </th>
             <td mat-cell *matCellDef="let element; let i = index">
-              <a routerLink="1">
+              <a routerLink="1" class="whitespace-nowrap">
                 {{ "Hiep Nguyen" }}
               </a>
             </td>
