--- a/src/app/modules/admin/tutors/tutor-profile/tutor-profile.component.html
+++ b/src/app/modules/admin/tutors/tutor-profile/tutor-profile.component.html
@@ -1,22 +1,35 @@
-<div class="flex flex-col w-full max-w-6xl mx-auto overflow-hidden">
+<div class="flex flex-col w-full max-w-7xl mx-auto overflow-hidden">
   <div class="flex-grow flex-wrap flex gap-8">
     <div class="flex flex-col w-64 flex-shrink-0">
       <div class="font-medium text-gray-900 text-2xl mb-4">
         {{ "TutorInfo.TutorProfile" | translate }}
       </div>
       <a
-        class="mb-2 flex items-center gap-3 hover:no-underline px-3 py-2 rounded text-gray-500 cursor-pointer hover:bg-gray-200"
+        class="mb-2 flex items-center gap-3 hover:no-underline px-4 py-2 rounded text-gray-500 cursor-pointer hover:bg-gray-200"
         *ngFor="let item of navigation"
-        [routerLink]="item.routerLink"
-        routerLinkActive="bg-gray-200"
+        [ngClass]="selectedItem === item ? 'bg-gray-200' : ''"
+        (click)="selectedItem = item"
       >
-        <div routerLinkActive="text-primary font-medium">
+        <div
+          [ngClass]="selectedItem === item ? 'text-primary font-medium' : ''"
+        >
           {{ item.translateKey | translate }}
         </div>
       </a>
     </div>
     <div class="flex-grow">
-      <router-outlet></router-outlet>
+      <app-tutor-basic-info
+        *ngIf="selectedItem?.value === 'basic'"
+      ></app-tutor-basic-info>
+      <app-tutor-experience
+        *ngIf="selectedItem?.value === 'experience'"
+      ></app-tutor-experience>
+      <app-tutor-teaching
+        *ngIf="selectedItem?.value === 'teaching'"
+      ></app-tutor-teaching>
+      <app-tutor-additional-info
+        *ngIf="selectedItem?.value === 'additional'"
+      ></app-tutor-additional-info>
     </div>
   </div>
 </div>
