--- a/src/app/modules/client/onboarding/student-info/student-info.component.html
+++ b/src/app/modules/client/onboarding/student-info/student-info.component.html
@@ -5,7 +5,6 @@
     <div class="flex justify-between items-center gap-4 w-full py-4 h-16">
       <button
         mat-button
-        class="btn"
         type="button"
         routerLink="/onboarding/account-type"
       >
@@ -20,7 +19,7 @@
         </div>
       </button>
 
-      <button mat-button class="btn" type="button" (click)="logout()">
+      <button mat-button type="button" (click)="logout()">
         <div class="text-primary">
           {{ "OnBoarding.Logout" | translate }}
         </div>
