--- a/src/app/modules/client/onboarding/tutor-info/tutor-info.component.html
+++ b/src/app/modules/client/onboarding/tutor-info/tutor-info.component.html
@@ -3,12 +3,7 @@
 >
   <div class="w-full max-w-7xl flex flex-col gap-6 items-center justify-start">
     <div class="flex justify-between items-center gap-4 w-full py-4 h-16">
-      <button
-        mat-button
-        class="btn btn"
-        type="button"
-        routerLink="/onboarding/account-type"
-      >
+      <button mat-button type="button" routerLink="/onboarding/account-type">
         <div class="flex items-center gap-1">
           <mat-icon
             class="!text-gray-500"
@@ -20,7 +15,7 @@
         </div>
       </button>
 
-      <button mat-button class="btn" type="button" (click)="logout()">
+      <button mat-button type="button" (click)="logout()">
         <div class="text-primary">
           {{ "OnBoarding.Logout" | translate }}
         </div>
@@ -95,7 +90,6 @@
                               tutorBasicInfoForm.get('profilePictureUrl')?.value
                             "
                             type="button"
-                            class="btn btn--sm"
                             mat-button
                             [color]="'primary'"
                             (click)="onRemoveProfilePicture()"
@@ -105,7 +99,6 @@
 
                           <button
                             type="button"
-                            class="btn btn--sm"
                             mat-flat-button
                             [color]="'primary'"
                             (click)="uploadProfilePictureFile.click()"
