--- a/src/app/modules/client/onboarding/student-info/student-info.component.html
+++ b/src/app/modules/client/onboarding/student-info/student-info.component.html
@@ -28,7 +28,7 @@
 
     <div class="w-full max-w-xl sm:px-6">
       <div class="font-medium text-gray-900 text-2xl text-center">
-        {{ "StudentInfo.Title" | translate }}
+        {{ "StudentInfo.StudentProfile" | translate }}
       </div>
       <form class="mt-8" [formGroup]="studentInfoForm" (ngSubmit)="submit()">
         <mat-form-field appearance="fill" class="w-full">
