--- a/src/app/modules/admin/manage-accounts/manage-accounts.component.html
+++ b/src/app/modules/admin/manage-accounts/manage-accounts.component.html
@@ -1,7 +1,7 @@
 <div class="w-full mx-auto min-h-full flex flex-col max-w-7xl">
   <div class="flex gap-2 flex-wrap md:flex-nowrap justify-between">
     <div class="font-medium text-gray-900 text-2xl w-full">
-      {{ "Student.Titles" | translate }}
+      {{ "Account.Titles" | translate }}
     </div>
     <mat-form-field
       class="w-full md:w-1/2 mat-form-field--sm"
@@ -12,7 +12,7 @@
       <input
         matInput
         type="text"
-        [placeholder]="'Student.SearchPlaceholder' | translate"
+        [placeholder]="'Account.SearchPlaceholder' | translate"
         name="search"
         [formControl]="searchInput"
         #search
@@ -37,7 +37,7 @@
       class="border border-solid border-gray-200 rounded-md shadow-sm overflow-hidden"
     >
       <div class="overflow-auto">
-        <table mat-table [dataSource]="dataSource" class="w-full">
+        <table mat-table [dataSource]="dataSource" class="w-full" matSort>
           <ng-container matColumnDef="no">
             <th mat-header-cell *matHeaderCellDef class="w-24">
               {{ "Table.No" | translate }}
@@ -91,6 +91,15 @@
             </td>
           </ng-container>
 
+          <ng-container matColumnDef="type">
+            <th mat-header-cell *matHeaderCellDef>
+              {{ "Table.Type" | translate }}
+            </th>
+            <td mat-cell *matCellDef="let element; let i = index">
+              <div class="tag tag--accent">{{ "Tutor" }}</div>
+            </td>
+          </ng-container>
+
           <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef class="w-40">
               {{ "Table.Status" | translate }}
@@ -99,7 +108,7 @@
               <!-- <div class="tag" [ngClass]="getStatus(element).class">
                 {{ getStatus(element).translateKey | translate }}
               </div> -->
-              <div class="tag tag--warning">Pending</div>
+              <div class="tag tag--info">Reviewing</div>
             </td>
           </ng-container>
 
