--- a/src/app/modules/client/onboarding/congratulations/congratulations.component.html
+++ b/src/app/modules/client/onboarding/congratulations/congratulations.component.html
@@ -2,7 +2,7 @@
   class="w-full min-h-full flex flex-col gap-10 items-center bg-gray-100 relative px-4 justify-center"
 >
   <div
-    class="w-full max-w-md sm:bg-white sm:p-10 sm:py-12 sm:rounded-md sm:shadow-sm sm:border border-solid border-gray-200"
+    class="w-full max-w-md sm:bg-white p-8 py-10 sm:rounded-md sm:shadow-sm sm:border border-solid border-gray-200"
   >
     <div class="flex flex-col gap-3 justify-center items-center">
       <mat-icon
