update something new

--- a/src/app/auth/password-reset/password-reset.component.html
+++ b/src/app/auth/password-reset/password-reset.component.html
@@ -5,17 +5,17 @@
     <div class="flex justify-between items-center gap-4 w-full py-4">
       <div class="flex items-center gap-2">
         <a
-          class="font-semibold text-gray-900 text-xl hover:no-underline cursor-pointer select-none"
+          class="font-semibold  text-xl hover:no-underline cursor-pointer select-none"
           routerLink="/"
           >Vietspeak</a
         >
         <languages></languages>
       </div>
     </div>
-    <div class="w-full max-w-md sm:bg-white sm:p-8 sm:py-10 sm:rounded-md sm:shadow-sm sm:border border-solid border-gray-200">
+    <div class="w-full max-w-md sm:bg-surface sm:p-8 sm:py-10 sm:rounded-md sm:shadow-sm sm:border border-solid border-light">
       <ng-container *ngIf="!isChanged">
         <div class="flex flex-col gap-3 text-center">
-          <div class="font-medium text-gray-900 text-2xl">
+          <div class="font-medium  text-2xl">
             {{ "PasswordReset.Title" | translate }}
           </div>
           <div class="text-gray-600">
@@ -155,10 +155,10 @@
             class="icon-size-18 text-success"
             svgIcon="mat_outline:check_circle"
           ></mat-icon>
-          <div class="font-semibold text-xl text-gray-900">
+          <div class="font-semibold text-xl ">
             {{ "PasswordReset.ChangedPasswordSuccessfully" | translate }}
           </div>
-          <div class="text-gray-500 text-lg">
+          <div class="text-tertiary text-lg">
             {{ "PasswordReset.GoLoginWithNewPassword" | translate }}
           </div>
           <button
