--- a/src/app/components/languages/languages.component.html
+++ b/src/app/components/languages/languages.component.html
@@ -9,7 +9,7 @@
 </button>
 
 <!-- User menu -->
-<mat-menu #languagesMenu="matMenu" class="text-gray-500">
+<mat-menu #languagesMenu="matMenu" class="text-tertiary">
   <ng-template matMenuContent>
     <button
       mat-menu-item
