--- a/src/app/layout/layouts/admin/admin.component.html
+++ b/src/app/layout/layouts/admin/admin.component.html
@@ -10,7 +10,7 @@
         [navigation]="navigation"
         [mode]="isScreenSmall ? 'over' : 'side'"
         [opened]="!isScreenSmall"
-        class="bg-white text-gray-700"
+        class="bg-surface text-secondary"
       >
       </vertical-navigation>
     </div>
