--- a/src/app/layout/layouts/admin/components/header/header.component.html
+++ b/src/app/layout/layouts/admin/components/header/header.component.html
@@ -1,15 +1,13 @@
 <div
-  class="bg-white text-gray-900 border-0 border-b border-solid border-gray-200 flex px-2 md:px-4 h-14"
+  class="bg-surface border-0 border-b border-solid border-border border-light flex px-2 md:px-4 h-14"
 >
   <div class="flex justify-center items-center gap-2">
     <div class="block md:hidden">
-      <button
-        mat-icon-button
-        type="button"
-        (click)="toggleNavigation()"
-        class=""
-      >
-        <mat-icon svgIcon="mat_outline:menu" class="icon-size-6 text-current"></mat-icon>
+      <button mat-icon-button type="button" (click)="toggleNavigation()">
+        <mat-icon
+          svgIcon="mat_outline:menu"
+          class="icon-size-6 icon"
+        ></mat-icon>
       </button>
     </div>
 
