--- a/src/app/layout/layouts/tutor/components/header/header.component.html
+++ b/src/app/layout/layouts/tutor/components/header/header.component.html
@@ -1,9 +1,9 @@
 <div
-  class="bg-white border-0 border-b border-solid border-gray-200 flex px-6 h-14 shadow-sm"
+  class="bg-surface border-0 border-b border-solid border-light flex px-6 h-14 shadow-sm"
 >
   <div class="flex justify-center items-center gap-2">
     <a
-      class="font-semibold text-gray-900 text-lg hover:no-underline cursor-pointer select-none"
+      class="font-semibold  text-lg hover:no-underline cursor-pointer select-none"
       routerLink="/tutor/home"
       >Vietspeak</a
     >
