--- a/src/app/modules/client/onboarding/congratulations/congratulations.component.html
+++ b/src/app/modules/client/onboarding/congratulations/congratulations.component.html
@@ -2,15 +2,15 @@
   class="w-full min-h-full flex flex-col gap-10 items-center bg-gray-100 relative px-4 justify-center"
 >
   <div
-    class="w-full max-w-md sm:bg-white p-8 py-10 sm:rounded-md sm:shadow-sm sm:border border-solid border-gray-200"
+    class="w-full max-w-md sm:bg-surface p-8 py-10 sm:rounded-md sm:shadow-sm sm:border border-solid border-light"
   >
     <div class="flex flex-col gap-3 justify-center items-center">
       <mat-icon
         class="icon-size-18 text-success"
         svgIcon="mat_outline:check_circle"
       ></mat-icon>
-      <div class="font-medium text-2xl text-gray-900">Congratulations!</div>
-      <div class="text-gray-500 text-lg">Your account is now ready</div>
+      <div class="font-medium text-2xl ">Congratulations!</div>
+      <div class="text-tertiary text-lg">Your account is now ready</div>
       <button
         class="w-full !mt-6 btn--lg"
         mat-flat-button
