--- a/src/app/modules/client/student/account/user-profile/user-profile.component.html
+++ b/src/app/modules/client/student/account/user-profile/user-profile.component.html
@@ -1,9 +1,9 @@
 <div class="w-full">
   <form [formGroup]="studentProfileForm" class="flex flex-col gap-4">
     <div
-      class="w-full flex flex-col bg-white rounded-md p-6 shadow-sm border border-solid border-gray-200"
+      class="w-full flex flex-col bg-surface rounded-md p-6 shadow-sm border border-solid border-light"
     >
-      <div class="font-medium text-gray-900 text-xl mb-3">
+      <div class="font-medium  text-xl mb-3">
         {{ "StudentInfo.Basic" | translate }}
       </div>
 
@@ -161,9 +161,9 @@
       </mat-form-field>
     </div>
     <div
-      class="w-full flex flex-col bg-white rounded-md p-6 shadow-sm border border-solid border-gray-200"
+      class="w-full flex flex-col bg-surface rounded-md p-6 shadow-sm border border-solid border-light"
     >
-      <div class="font-medium text-gray-900 text-xl mb-3">
+      <div class="font-medium  text-xl mb-3">
         {{ "StudentInfo.Learning" | translate }}
       </div>
       <mat-form-field appearance="fill" class="w-full">
