--- a/src/material/_material-customs.scss
+++ b/src/material/_material-customs.scss
@@ -856,3 +856,19 @@ mat-stepper {
     @apply px-4;
   }
 }
+
+
+/* ----------------------------------------------------------------------------------------------------- */
+/*  Tabs
+/* ----------------------------------------------------------------------------------------------------- */
+
+// Tab nav bar
+.mat-tab-nav-bar {
+  border-bottom: 0 !important;
+
+  .mat-tab-link {
+    min-width: 100px;
+    height: 40px;
+    text-decoration-line: none;
+  }
+}
