--- a/src/styles/scss/base/_base.scss
+++ b/src/styles/scss/base/_base.scss
@@ -1,3 +1,11 @@
+html {
+  @apply w-full h-full overflow-auto;
+}
+
+body {
+  @apply w-full h-full text-base font-sans text-default;
+}
+
 a {
   @apply text-primary hover:underline;
 }
