--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -5,7 +5,7 @@
     <div class="flex justify-between items-center gap-4 w-full py-4">
       <div class="flex items-center gap-2">
         <a
-          class="font-semibold text-gray-900 text-xl hover:no-underline cursor-pointer select-none"
+          class="font-semibold  text-xl hover:no-underline cursor-pointer select-none"
           routerLink="/"
           >Vietspeak</a
         >
@@ -26,10 +26,10 @@
       </div>
     </div>
     <div
-      class="w-full max-w-md sm:bg-white sm:p-8 sm:py-10 sm:rounded-md sm:shadow-sm sm:border border-solid border-gray-200"
+      class="w-full max-w-md sm:bg-surface sm:p-8 sm:py-10 sm:rounded-md sm:shadow-sm sm:border border-solid border-light"
     >
       <div class="flex flex-col gap-3 text-center">
-        <div class="font-medium text-gray-900 text-2xl">
+        <div class="font-medium  text-2xl">
           {{ "ForgotPassword.Title" | translate }}
         </div>
         <div class="text-gray-600">
