--- a/src/app/modules/admin/users/users.component.html
+++ b/src/app/modules/admin/users/users.component.html
@@ -1,7 +1,7 @@
 <div class="w-full mx-auto min-h-full flex flex-col max-w-7xl">
   <div class="flex gap-2 flex-wrap md:flex-nowrap justify-between">
-    <div class="font-medium text-gray-900 text-2xl w-full">
-      {{ "Account.Titles" | translate }}
+    <div class="font-medium text-2xl w-full">
+      {{ "Users.Title" | translate }}
     </div>
     <mat-form-field
       class="w-full md:w-1/2 mat-form-field--sm"
@@ -12,7 +12,7 @@
       <input
         matInput
         type="text"
-        [placeholder]="'Account.SearchPlaceholder' | translate"
+        [placeholder]="'Users.SearchPlaceholder' | translate"
         name="search"
         [formControl]="searchInput"
         #search
@@ -34,7 +34,7 @@
   </div>
   <div class="flex-grow">
     <div
-      class="border border-solid border-gray-200 rounded-md shadow-sm overflow-hidden"
+      class="border border-solid border-light rounded-md shadow-sm overflow-hidden"
     >
       <div class="overflow-auto">
         <table mat-table [dataSource]="dataSource" class="w-full" matSort>
@@ -108,7 +108,10 @@
               <!-- <div class="tag" [ngClass]="getStatus(element).class">
                 {{ getStatus(element).translateKey | translate }}
               </div> -->
-              <div class="tag tag--info">Reviewing</div>
+              <div class="flex gap-2 items-center">
+                <div class="w-4 h-4 rounded-full bg-warn-400"></div>
+                <div>Pending</div>
+              </div>
             </td>
           </ng-container>
 
@@ -182,7 +185,7 @@
     *ngFor="let item of dataSource.data | paginate : paginationConfig"
   ></ng-container>
   <div class="mt-6 flex gap-4 items-center justify-between">
-    <div class="text-gray-500 text-sm">
+    <div class="text-tertiary text-sm">
       {{ "1" }} {{ "Table.To" | translate }} {{ "11" }}
       {{ "Table.Of" | translate }} {{ "65" }} {{ "Table.Records" | translate }}
     </div>
