--- a/src/app/modules/client/onboarding/welcome/welcome.component.html
+++ b/src/app/modules/client/onboarding/welcome/welcome.component.html
@@ -4,7 +4,7 @@
   <div class="w-full max-w-7xl flex flex-col gap-6 items-center justify-start">
     <div class="flex justify-between items-center gap-4 w-full py-4 h-16">
       <div class="flex items-center gap-2">
-        <div class="font-semibold text-gray-900 text-xl cursor-pointer">
+        <div class="font-semibold  text-xl cursor-pointer">
           Vietspeak
         </div>
         <languages></languages>
@@ -16,10 +16,10 @@
     </div>
 
     <div
-      class="w-full max-w-md sm:bg-white p-8 py-10 sm:rounded-md sm:shadow-sm sm:border border-solid border-gray-200"
+      class="w-full max-w-md sm:bg-surface p-8 py-10 sm:rounded-md sm:shadow-sm sm:border border-solid border-light"
     >
       <div
-        class="font-medium text-gray-900 text-2xl text-center mb-6 flex flex-col gap-3 items-center justify-center"
+        class="font-medium  text-2xl text-center mb-6 flex flex-col gap-3 items-center justify-center"
       >
         <mat-icon
           class="text-yellow-500 icon-size-14"
