--- a/src/app/modules/client/student/account/change-password/change-password.component.html
+++ b/src/app/modules/client/student/account/change-password/change-password.component.html
@@ -5,9 +5,9 @@
     class="flex flex-col gap-4"
   >
     <div
-      class="bg-white rounded-md p-6 pb-2 shadow-sm border border-solid border-gray-200"
+      class="bg-surface rounded-md p-6 pb-2 shadow-sm border border-solid border-light"
     >
-      <div class="font-medium text-gray-900 text-xl mb-3">
+      <div class="font-medium  text-xl mb-3">
         {{ "ChangePassword.Title" | translate }}
       </div>
 
