--- a/src/app/modules/client/tutor/home/home.component.html
+++ b/src/app/modules/client/tutor/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="w-full max-w-7xl mx-auto">
-  <div class="font-medium text-gray-900 text-2xl">
+  <div class="font-medium  text-2xl">
     {{
       "Home.Welcome"
         | translate : { name: userService.currentUserValue?.fullName }
