update something new

--- a/src/app/modules/admin/users/user-profile/user-profile.component.html
+++ b/src/app/modules/admin/users/user-profile/user-profile.component.html
@@ -49,12 +49,12 @@
   <div class="w-full md:w-2/3">
     <div class="flex flex-col gap-4">
       <div
-        class="p-6 rounded-md bg-surface border border-solid border-light shadow-sm flex flex-col gap-3"
+        class="p-6 rounded-md bg-surface border border-solid border-light shadow-sm flex flex-col gap-4"
       >
         <div class="font-medium text-secondary text-xl">
           {{ "Introduction" | translate }}
         </div>
-        <p class="text-secondary leading-relaxed">
+        <p class="text-secondary leading-7">
           Hello everybody! My name is Theresa and I live just outside Cape Town
           in beautiful sunny South Africa. I have many years experience teaching
           English online and enjoy the vibrancy and energy in the classroom. I
@@ -87,17 +87,17 @@
       </div>
 
       <div
-        class="p-6 rounded-md bg-surface border border-solid border-light shadow-sm flex flex-col gap-3"
+        class="p-6 rounded-md bg-surface border border-solid border-light shadow-sm flex flex-col gap-4"
       >
         <div class="font-medium text-secondary text-xl">
           {{ "Motivation" | translate }}
         </div>
-        <div class="flex flex-col gap-2">
-          <div class="flex flex-col gap-1">
-            <div class="text-tertiary">
+        <div class="flex flex-col gap-4">
+          <div class="flex flex-col gap-2">
+            <div class="text-primary">
               Why do you want to become a teacher with Lingoda?
             </div>
-            <p class="text-secondary leading-relaxed">
+            <p class="text-secondary leading-7">
               Hello everybody! My name is Theresa and I live just outside Cape
               Town in beautiful sunny South Africa. I have many years experience
               teaching English online and enjoy the vibrancy and energy in the
@@ -107,10 +107,10 @@
             </p>
           </div>
           <div class="flex flex-col gap-2">
-            <div class="text-tertiary">How did you hear about us?</div>
+            <div class="text-primary">How did you hear about us?</div>
             <div>
               <div
-                class="px-4 py-1 rounded-full bg-primary-100 inline-block font-medium text-primary"
+                class="text-secondary"
               >
                 Friend / Family
               </div>
